v0.18.0/_sources/gallery/basemaps/ternary.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/basemaps/ternary.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_basemaps_ternary.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_basemaps_ternary.py:


Ternary diagram
===============

The :meth:`pygmt.Figure.ternary` method can draw ternary diagrams. The example
shows how to plot circles with a diameter of 0.1 centimeters
(``style="c0.1c"``) on a 10-centimeters-wide (``width="10c"``) ternary diagram
at the positions listed in the first three columns of the sample dataset
``rock_compositions``, with default annotations and gridline spacings, using
the specified labeling defined via ``alabel``, ``blabel``, and ``clabel``.
Points are colored based on the values given in the fourth column of the
sample dataset via ``cmap=True``.

.. GENERATED FROM PYTHON SOURCE LINES 16-49



.. image-sg:: /gallery/basemaps/images/sphx_glr_ternary_001.png
   :alt: ternary
   :srcset: /gallery/basemaps/images/sphx_glr_ternary_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt
    from pygmt.params import Position

    fig = pygmt.Figure()

    # Load sample data
    data = pygmt.datasets.load_sample_data(name="rock_compositions")

    # Define a colormap to be used for the values given in the fourth column
    # of the input dataset
    pygmt.makecpt(cmap="SCM/batlow", series=[0, 80, 10])

    fig.ternary(
        data,
        region=[0, 100, 0, 100, 0, 100],
        width="10c",
        style="c0.1c",
        alabel="Limestone",
        blabel="Water",
        clabel="Air",
        cmap=True,
        frame=[
            "aafg+lLimestone component+u %",
            "bafg+lWater component+u %",
            "cafg+lAir component+u %",
        ],
    )

    # Add a colorbar indicating the values given in the fourth column of the input dataset
    fig.colorbar(
        position=Position("BC", cstype="outside", offset=(0, 1.5)), frame="x+lPermittivity"
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.206 seconds)


.. _sphx_glr_download_gallery_basemaps_ternary.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: ternary.ipynb <ternary.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: ternary.py <ternary.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: ternary.zip <ternary.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
